--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@supabase/supabase-js": "^2.58.0",
     "date-fns": "^4.1.0",
     "react": "^19.1.1",
+    "react-date-range": "^2.0.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.3",
     "recharts": "^3.2.1"
